gen/MusicLanguageParser.py
# Generated from /Users/sol/Documents/MyStuff/informatyka_rokIII/TKiK/music_language/MusicLanguage.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MusicLanguageParser ( Parser ):

    grammarFileName = "MusicLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\n'", "'TEMPO'", "':'", "'TIMBRE'", 
                     "'Note'", "','", "'Bar'", "'BarsList'", "'play'", "'integer'", 
                     "'string'", "'if'", "':\n'", "'else:\n'", "'endif'", 
                     "'for'", "'from'", "'to'", "'endfor'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", 
                     "'<='", "'>='", "'!'", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "TIMBRE", "PITCH", "NUMBER", "NAME", "WS", "CR", "ADD", 
                      "SUBSTRACT", "MULTIPLY", "DIVIDE", "LOWER", "GREATER", 
                      "LE", "GE", "NOT", "EQUALS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_tempo = 2
    RULE_meter = 3
    RULE_timbre = 4
    RULE_note = 5
    RULE_bar = 6
    RULE_bars_list = 7
    RULE_play = 8
    RULE_integer = 9
    RULE_string = 10
    RULE_phrase = 11
    RULE_phrases = 12
    RULE_arithmetic = 13
    RULE_logic = 14
    RULE_nequals = 15
    RULE_check_if = 16
    RULE_condition = 17
    RULE_for_loop = 18

    ruleNames =  [ "program", "declaration", "tempo", "meter", "timbre", 
                   "note", "bar", "bars_list", "play", "integer", "string", 
                   "phrase", "phrases", "arithmetic", "logic", "nequals", 
                   "check_if", "condition", "for_loop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    TIMBRE=20
    PITCH=21
    NUMBER=22
    NAME=23
    WS=24
    CR=25
    ADD=26
    SUBSTRACT=27
    MULTIPLY=28
    DIVIDE=29
    LOWER=30
    GREATER=31
    LE=32
    GE=33
    NOT=34
    EQUALS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MusicLanguageParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MusicLanguageParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MusicLanguageParser.DeclarationContext,i)


        def play(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MusicLanguageParser.PlayContext)
            else:
                return self.getTypedRuleContext(MusicLanguageParser.PlayContext,i)


        def getRuleIndex(self):
            return MusicLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MusicLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 38
                    self.declaration()
                    pass

                elif la_ == 2:
                    self.state = 39
                    self.play()
                    pass

                elif la_ == 3:
                    self.state = 40
                    self.match(MusicLanguageParser.T__0)
                    pass


                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MusicLanguageParser.T__0) | (1 << MusicLanguageParser.T__1) | (1 << MusicLanguageParser.T__3) | (1 << MusicLanguageParser.T__4) | (1 << MusicLanguageParser.T__6) | (1 << MusicLanguageParser.T__7) | (1 << MusicLanguageParser.T__8) | (1 << MusicLanguageParser.T__9) | (1 << MusicLanguageParser.T__10) | (1 << MusicLanguageParser.T__11) | (1 << MusicLanguageParser.T__15) | (1 << MusicLanguageParser.NUMBER) | (1 << MusicLanguageParser.WS))) != 0)):
                    break

            self.state = 45
            self.match(MusicLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tempo(self):
            return self.getTypedRuleContext(MusicLanguageParser.TempoContext,0)


        def meter(self):
            return self.getTypedRuleContext(MusicLanguageParser.MeterContext,0)


        def timbre(self):
            return self.getTypedRuleContext(MusicLanguageParser.TimbreContext,0)


        def note(self):
            return self.getTypedRuleContext(MusicLanguageParser.NoteContext,0)


        def bar(self):
            return self.getTypedRuleContext(MusicLanguageParser.BarContext,0)


        def bars_list(self):
            return self.getTypedRuleContext(MusicLanguageParser.Bars_listContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MusicLanguageParser.For_loopContext,0)


        def check_if(self):
            return self.getTypedRuleContext(MusicLanguageParser.Check_ifContext,0)


        def integer(self):
            return self.getTypedRuleContext(MusicLanguageParser.IntegerContext,0)


        def string(self):
            return self.getTypedRuleContext(MusicLanguageParser.StringContext,0)


        def getRuleIndex(self):
            return MusicLanguageParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MusicLanguageParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 47
                self.tempo()
                pass

            elif la_ == 2:
                self.state = 48
                self.meter()
                pass

            elif la_ == 3:
                self.state = 49
                self.timbre()
                pass

            elif la_ == 4:
                self.state = 50
                self.note()
                pass

            elif la_ == 5:
                self.state = 51
                self.bar()
                pass

            elif la_ == 6:
                self.state = 52
                self.bars_list()
                pass

            elif la_ == 7:
                self.state = 53
                self.for_loop()
                pass

            elif la_ == 8:
                self.state = 54
                self.check_if()
                pass

            elif la_ == 9:
                self.state = 55
                self.integer()
                pass

            elif la_ == 10:
                self.state = 56
                self.string()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TempoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(MusicLanguageParser.NUMBER, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_tempo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTempo" ):
                listener.enterTempo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTempo" ):
                listener.exitTempo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTempo" ):
                return visitor.visitTempo(self)
            else:
                return visitor.visitChildren(self)




    def tempo(self):

        localctx = MusicLanguageParser.TempoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tempo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 59
                self.match(MusicLanguageParser.WS)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(MusicLanguageParser.T__1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 66
                self.match(MusicLanguageParser.WS)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(MusicLanguageParser.T__2)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 73
                self.match(MusicLanguageParser.WS)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(MusicLanguageParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.NUMBER)
            else:
                return self.getToken(MusicLanguageParser.NUMBER, i)

        def DIVIDE(self):
            return self.getToken(MusicLanguageParser.DIVIDE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_meter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeter" ):
                listener.enterMeter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeter" ):
                listener.exitMeter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeter" ):
                return visitor.visitMeter(self)
            else:
                return visitor.visitChildren(self)




    def meter(self):

        localctx = MusicLanguageParser.MeterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_meter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 81
                self.match(MusicLanguageParser.WS)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(MusicLanguageParser.NUMBER)
            self.state = 88
            self.match(MusicLanguageParser.DIVIDE)
            self.state = 89
            self.match(MusicLanguageParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimbreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIMBRE(self):
            return self.getToken(MusicLanguageParser.TIMBRE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_timbre

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimbre" ):
                listener.enterTimbre(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimbre" ):
                listener.exitTimbre(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimbre" ):
                return visitor.visitTimbre(self)
            else:
                return visitor.visitChildren(self)




    def timbre(self):

        localctx = MusicLanguageParser.TimbreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_timbre)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 91
                self.match(MusicLanguageParser.WS)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MusicLanguageParser.T__3)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 98
                self.match(MusicLanguageParser.WS)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(MusicLanguageParser.T__2)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 105
                self.match(MusicLanguageParser.WS)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(MusicLanguageParser.TIMBRE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pitch = None # Token
            self.duration = None # Token

        def NAME(self):
            return self.getToken(MusicLanguageParser.NAME, 0)

        def PITCH(self):
            return self.getToken(MusicLanguageParser.PITCH, 0)

        def NUMBER(self):
            return self.getToken(MusicLanguageParser.NUMBER, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_note

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNote" ):
                listener.enterNote(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNote" ):
                listener.exitNote(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNote" ):
                return visitor.visitNote(self)
            else:
                return visitor.visitChildren(self)




    def note(self):

        localctx = MusicLanguageParser.NoteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_note)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 113
                self.match(MusicLanguageParser.WS)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(MusicLanguageParser.T__4)
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.match(MusicLanguageParser.WS)
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MusicLanguageParser.WS):
                    break

            self.state = 125
            self.match(MusicLanguageParser.NAME)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 126
                self.match(MusicLanguageParser.WS)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(MusicLanguageParser.T__2)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 133
                self.match(MusicLanguageParser.WS)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            localctx.pitch = self.match(MusicLanguageParser.PITCH)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 140
                self.match(MusicLanguageParser.WS)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(MusicLanguageParser.T__5)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 147
                self.match(MusicLanguageParser.WS)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            localctx.duration = self.match(MusicLanguageParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.NAME)
            else:
                return self.getToken(MusicLanguageParser.NAME, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_bar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBar" ):
                listener.enterBar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBar" ):
                listener.exitBar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBar" ):
                return visitor.visitBar(self)
            else:
                return visitor.visitChildren(self)




    def bar(self):

        localctx = MusicLanguageParser.BarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 155
                self.match(MusicLanguageParser.WS)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(MusicLanguageParser.T__6)
            self.state = 163 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.match(MusicLanguageParser.WS)
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MusicLanguageParser.WS):
                    break

            self.state = 167
            self.match(MusicLanguageParser.NAME)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 168
                self.match(MusicLanguageParser.WS)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(MusicLanguageParser.T__2)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 175
                self.match(MusicLanguageParser.WS)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(MusicLanguageParser.NAME)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.T__5:
                self.state = 182
                self.match(MusicLanguageParser.T__5)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MusicLanguageParser.WS:
                    self.state = 183
                    self.match(MusicLanguageParser.WS)
                    self.state = 188
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 189
                self.match(MusicLanguageParser.NAME)
                self.state = 194
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bars_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.NAME)
            else:
                return self.getToken(MusicLanguageParser.NAME, i)

        def meter(self):
            return self.getTypedRuleContext(MusicLanguageParser.MeterContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_bars_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBars_list" ):
                listener.enterBars_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBars_list" ):
                listener.exitBars_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBars_list" ):
                return visitor.visitBars_list(self)
            else:
                return visitor.visitChildren(self)




    def bars_list(self):

        localctx = MusicLanguageParser.Bars_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bars_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 195
                self.match(MusicLanguageParser.WS)
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 201
            self.match(MusicLanguageParser.T__7)
            self.state = 205
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 202
                self.match(MusicLanguageParser.WS)
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 208
            self.match(MusicLanguageParser.NAME)
            self.state = 212
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 209
                self.match(MusicLanguageParser.WS)
                self.state = 214
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 215
            self.match(MusicLanguageParser.T__2)
            self.state = 219
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 216
                    self.match(MusicLanguageParser.WS) 
                self.state = 221
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

            self.state = 222
            self.meter()
            self.state = 226
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 223
                self.match(MusicLanguageParser.WS)
                self.state = 228
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 229
            self.match(MusicLanguageParser.T__5)
            self.state = 233
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 230
                self.match(MusicLanguageParser.WS)
                self.state = 235
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 236
            self.match(MusicLanguageParser.NAME)
            self.state = 247
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.T__5:
                self.state = 237
                self.match(MusicLanguageParser.T__5)
                self.state = 241
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MusicLanguageParser.WS:
                    self.state = 238
                    self.match(MusicLanguageParser.WS)
                    self.state = 243
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 244
                self.match(MusicLanguageParser.NAME)
                self.state = 249
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.NAME)
            else:
                return self.getToken(MusicLanguageParser.NAME, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_play

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlay" ):
                listener.enterPlay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlay" ):
                listener.exitPlay(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)




    def play(self):

        localctx = MusicLanguageParser.PlayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_play)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.WS:
                self.state = 250
                self.match(MusicLanguageParser.WS)
                self.state = 255
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 256
            self.match(MusicLanguageParser.T__8)
            self.state = 258 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 257
                self.match(MusicLanguageParser.WS)
                self.state = 260 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MusicLanguageParser.WS):
                    break

            self.state = 262
            self.match(MusicLanguageParser.NAME)
            self.state = 273
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MusicLanguageParser.T__5:
                self.state = 263
                self.match(MusicLanguageParser.T__5)
                self.state = 267
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MusicLanguageParser.WS:
                    self.state = 264
                    self.match(MusicLanguageParser.WS)
                    self.state = 269
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 270
                self.match(MusicLanguageParser.NAME)
                self.state = 275
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(MusicLanguageParser.NAME, 0)

        def NUMBER(self):
            return self.getToken(MusicLanguageParser.NUMBER, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(MusicLanguageParser.WS)
            else:
                return self.getToken(MusicLanguageParser.WS, i)

        def getRuleIndex(self):
            return MusicLanguageParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)
